<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.ElementCheckoutActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="16dp"
                android:text="Element Checkout Sample Code" />

            <LinearLayout
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_amount"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <Button
                    android:id="@+id/upiCollect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doUPICollectPayment"
                    android:text="@string/upi_collect" />

                <Button
                    android:id="@+id/upiIntent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doUPIIntentPayment"
                    android:text="@string/upi_intent" />

                <Button
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doCardPayment"
                    android:text="@string/card" />

                <Button
                    android:id="@+id/card_emi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doCardEMIPayment"
                    android:text="@string/card_emi" />

                <Button
                    android:id="@+id/netbanking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doNetBankingPayment"
                    android:text="@string/netbanking" />

                <Button
                    android:id="@+id/wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doWalletPayment"
                    android:text="@string/wallet" />

                <Button
                    android:id="@+id/btn_paylater"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="doPayLaterPayment"
                    android:text="@string/payLater" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/element_card"
                style="@style/Cashfree.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_margin="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp">

                    <com.cashfree.pg.core.api.ui.CFCardNumberView
                        android:id="@+id/cf_element_card"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="Card Number"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/color_cta"
                        app:cf_card_error_text="Enter valid card number"
                        app:cf_card_text_size="16sp"
                        app:errorTextColor="@color/holo_red_dark"
                        app:helperTextTextColor="@color/color_cta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_element_card_holder"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:hint="card holder name"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/color_cta"
                        app:errorTextColor="@color/holo_red_dark"
                        app:helperTextTextColor="@color/color_cta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cf_element_card">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_element_card_holder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:maxLength="120"
                            android:maxLines="1"
                            android:text="KISHAN" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_element_card_mm"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        
                        android:hint="MM"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/color_cta"
                        app:errorTextColor="@color/holo_red_dark"
                        app:helperTextTextColor="@color/color_cta"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3_element"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/til_element_card_holder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_element_card_mm"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="2"
                            android:maxLines="1"
                            android:text="03" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_element_card_yyyy"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="16dp"
                        android:hint="YY"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/color_cta"
                        app:errorTextColor="@color/holo_red_dark"
                        app:helperTextTextColor="@color/color_cta"
                        app:layout_constraintEnd_toStartOf="@+id/guideline2_element"
                        app:layout_constraintStart_toStartOf="@+id/guideline3_element"
                        app:layout_constraintTop_toBottomOf="@+id/til_element_card_holder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_element_card_yyyy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="2"
                            android:maxLines="1"
                            android:text="29" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/til_element_card_cvv"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:hint="CVV"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="@color/color_cta"
                        app:errorTextColor="@color/holo_red_dark"
                        app:helperTextTextColor="@color/color_cta"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/guideline2_element"
                        app:layout_constraintTop_toBottomOf="@+id/til_element_card_holder">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/tie_element_card_cvv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="4"
                            android:maxLines="1"
                            android:text="123" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/pay_element_card"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="16dp"
                        android:onClick="onElementPayClick"
                        android:paddingVertical="12dp"
                        android:text="Element Card Payment"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/til_element_card_cvv" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline2_element"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.6" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline3_element"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.25" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>